# service/user.go
@@ -1,0 +1,38 @@
+package service
+
+import (
+	"github.com/gin-gonic/gin"
+	"net/http"
+	"online-judge/models"
+)
+
+// GetUserDetail
+// @Tags 公共方法
+// @Summary 用户详情
+// @Param identity query string false "user identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /user-detail [get]
+func GetUserDetail(ctx *gin.Context) {
+	identity := ctx.Query("identity")
+	if identity == "" {
+		ctx.JSON(http.StatusOK, gin.H{
+			"coed": -1,
+			"msg":  "用户唯一标识不能为空",
+		})
+		return
+	}
+
+	data := new(models.UserBasic)
+	err := models.DB.Where("identity = ?", identity).Omit("password").First(&data).Error
+	if err != nil {
+		ctx.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get User Detail Error:" + err.Error(),
+		})
+		return
+	}
+	ctx.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": data,
+	})
+}
